--- a/sample-service/src/main/resources/application.yml
+++ b/sample-service/src/main/resources/application.yml
@@ -16,7 +16,7 @@ eureka:
   client:
     healthcheck:
       enabled: false
-    enabled: true
+    enabled: false
     serviceUrl:
       defaultZone: http://eureka-service:8761/eureka
   instance:
