--- a/zuul-gateway/src/main/resources/application.yml
+++ b/zuul-gateway/src/main/resources/application.yml
@@ -1,58 +1,3 @@
-spring:
-  application:
-    name: zuul-gateway
-
-server:
-  port: ${VPORT:8080}
-  ssl:
-    enabled: false
-    key-store: classpath:keystore.jks
-    key-store-password: password
-    key-alias: tomcat
-
-security:
-  basic:
-    enabled: false
-management:
-  context-path: /admin
-  security:
-    enabled: false
-eureka:
-  client:
-    fetchRegistry: false
-    preferIpAddress: true
-    healthcheck:
-      enabled: false
-    enabled: false
-    serviceUrl:
-      defaultZone: http://eureka-service:8761/eureka
-  instance:
-    hostname: zuul-gateway
-    virtual-host-name: zuul-gateway
-    secure-port-enabled: false
-    non-secure-port-enabled: true
-    leaseRenewalIntervalInSeconds: 5
-    nonSecurePort: ${VPORT:8080}
-    statusPageUrlPath: http://zuul-gateway.excel.k8m.excel.io:${VPORT:8080}/info
-    status-page-url: http://zuul-gateway.excel.k8m.excel.io:${VPORT:8080}/info
-    healthCheckUrlPath: http://zuul-gateway:${VPORT:8080}/health
-    homePageUrl: https://zuul-gateway:${VPORT:8080}/
-    home-page-url: https://zuul-gateway:${VPORT:8080}/
-    
-zuul:
-  routes:
-    micro-service:
-      path: /microservice/**
-      url: http://localhost:5080/
-    aws-service:
-      path: /aws/**
-      serviceId: awsservice
-      
-awsservice:
-  ribbon:
-    ServerListRefreshInterval: 15000
-    listOfServers: localhost:5080,localhost:5081
-
-ribbon:
-  eureka:
-    enabled: false  
+info:
+  component: Zuul Gateway
+  
