--- a/sample-service/src/main/resources/application.yml
+++ b/sample-service/src/main/resources/application.yml
@@ -1,33 +1,3 @@
-spring:
-  application:
-    name: sample-service
-
-server:
-  port: ${VPORT:5080}
-
-security:
-  basic:
-    enabled: false
-management:
-  context-path: /admin
-  security:
-    enabled: false
-eureka:
-  client:
-    healthcheck:
-      enabled: false
-    enabled: false
-    serviceUrl:
-      defaultZone: http://eureka-service:8761/eureka
-  instance:
-    hostname: sample-service
-    virtual-host-name: sample-service
-    secure-port-enabled: false
-    non-secure-port-enabled: true
-    leaseRenewalIntervalInSeconds: 5
-    nonSecurePort: ${server.port}
-    statusPageUrlPath: http://sample-service.excel.k8m.excel.io/info
-    status-page-url: http://sample-service.excel.k8m.excel.io/info
-    healthCheckUrlPath: http://sample-service:${server.port}/health
-    homePageUrl: https://sample-service:${server.port}/
-    home-page-url: https://sample-service:${server.port}/
+info:
+  component: Sample Service
+  
