--- a/zuul-gateway/k8s.yml
+++ b/zuul-gateway/k8s.yml
@@ -4,6 +4,37 @@ kind: Namespace
 metadata:
   name: excel
 ---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: eureka-config
+  namespace: excel
+data:
+  VCONFIGCONTEXTPATH: config
+  VEUREKACONTEXTPATH: registry
+  VADMINPATH: admin
+  VREGION: default
+  VEUREKAUSER: config
+  VEUREKAPASS: config
+  VCONFIGUSER: config
+  VCONFIGPASS: config
+  VEUREKAHOST: eureka-service
+  VEUREKAPORT: 80
+  VCONFIGHOST: eureka-service
+  VCONFIGPORT: 80
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: zuul-gateway
+  namespace: excel
+data:
+  VDOMAIN: k8scluster.io
+  VPROFILE: excel
+  VSERVICENAME: zuul-gateway
+  VCONTEXTPATH: /
+  VPORT: 80
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -20,8 +51,13 @@ spec:
       containers:
       - name: zuul-gateway
         image: amitkshirsagar13/excel-zuul-gateway
+        envFrom:
+         - configMapRef:
+             name: eureka-config
+         - configMapRef:
+             name: zuul-gateway
         ports:
-        - containerPort: 8080
+        - containerPort: 80
 ---
 kind: Service
 apiVersion: v1
@@ -33,8 +69,8 @@ spec:
     app: zuul-gateway
   ports:
     - protocol: TCP
-      port: 8080
-      targetPort: 8080
+      port: 80
+      targetPort: 80
 ---
 apiVersion: extensions/v1beta1
 kind: Ingress
@@ -55,5 +91,5 @@ spec:
         paths:
           - backend:
               serviceName: zuul-gateway
-              servicePort: 8080
+              servicePort: 80
             path: /
