--- a/eureka-service/k8s.yml
+++ b/eureka-service/k8s.yml
@@ -41,7 +41,7 @@ metadata:
   name: eureka-service
   namespace: ${NAMESPACE}
 spec:
-  replicas: 1
+  replicas: ${REPLICA_NUM}
   template:
     metadata:
       labels:
