--- a/eureka-service/docker-compose.yml
+++ b/eureka-service/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile
     deploy:
-      replicas: 1
+      replicas: ${REPLICA_NUM}
     image: 'amitkshirsagar13/excel-eureka-service'
     labels:
       - 'service=eureka-service'
