working google api oauth2

--- a/nginxPlus/conf.d/sample.conf
+++ b/nginxPlus/conf.d/sample.conf
@@ -21,6 +21,9 @@ server {
 
         ssl_session_cache shared:SSL:1m;
         ssl_session_timeout 5m;
+
+        root /etc/nginx/conf.d;
+
         location /sample/ {
                 auth_jwt "Products API";
                 auth_jwt_key_file /etc/nginx/conf.d/api_secret.jwk;
@@ -29,6 +32,17 @@ server {
                 }
                 proxy_pass http://sample/;
                 proxy_set_header JWT $jwt_status;
+        }
+        location /google/ {
+                auth_jwt "Google API";
+                auth_jwt_key_file /etc/nginx/conf.d/google_certs.jwk;
+                proxy_pass http://sample/;
+                proxy_set_header JWT $jwt_claim_email;
+        }
+        location /private/ {
+                auth_jwt "Google account" token=$cookie_auth_token;
+                auth_jwt_key_file /etc/nginx/conf.d/google_certs.jwk;
+		proxy_pass https://$host$request_uri?email=$jwt_claim_email;
         }
 }
 
