--- a/nginxPlus/conf.d/sample.conf
+++ b/nginxPlus/conf.d/sample.conf
@@ -42,7 +42,7 @@ server {
         location /private/ {
                 auth_jwt "Google account" token=$cookie_auth_token;
                 auth_jwt_key_file /etc/nginx/conf.d/google_certs.jwk;
-		proxy_pass https://$host$request_uri?email=$jwt_claim_email;
+                proxy_set_header JWT $jwt_claim_email;
         }
 }
 
