--- a/zuul-gateway/src/main/resources/application.yml
+++ b/zuul-gateway/src/main/resources/application.yml
@@ -1,3 +1,17 @@
 info:
   component: Zuul Gateway
-  
+
+
+security:
+  user:
+    name: root
+    password: password
+  oauth2:
+    client:
+      accessTokenUri: http://localhost:9000/oauth2-base/oauth/token
+      userAuthorizationUri: http://localhost:9000/oauth2-base/oauth/authorize
+      clientAuthenticationScheme: form
+    resource:
+      userInfoUri: http://localhost:9000/oauth2-base/user
+      preferTokenInfo: false  
+  sessions: ALWAYS
