--- a/nginxPlus/kong/docker-compose.yml
+++ b/nginxPlus/kong/docker-compose.yml
@@ -1,51 +1,98 @@
-version: '3.7'
+version: '3.3'
 services:
-  kong-db:
+
+#Create a new empty database for kong to use
+# postgress used instead of cassendra as I haven't been able to find a healthcheck command for cassendra
+  db:
     image: postgres
+    restart: always
     ports:
-      - 127.0.0.1:5432:5432
+      - 5432:5432
     environment:
       POSTGRES_USER: kong
       POSTGRES_PASSWORD: kong
       POSTGRES_DB: kong
-      PGDATA: /var/lib/postgresql/data/pgdata
-    volumes:
-      - db-volume:/var/lib/postgresql/data/pgdata
     healthcheck:
       test: 'echo "select 1" | psql -U kong kong || exit 1'
       interval: 1m
       timeout: 3s
       retries: 3
-    restart: unless-stopped
-  kong:
-    image: kong
+
+  adminer:
+    image: adminer
+    restart: always
     ports:
-      - 127.0.0.1:8000:8000
-      - 127.0.0.1:8443:8443
-      - 127.0.0.1:8001:8001
-      - 127.0.0.1:8444:8444
+      - 8080:8080
+    depends_on:
+      - db
+    links:
+      - db
+
+  #######################################
+  # Kong database migration
+  #######################################
+  kong-migration:
+    image: "kong:latest"
+    command: "kong migrations up"
+    restart: on-failure
     environment:
       KONG_DATABASE: postgres
-      KONG_PG_HOST: kong-db
       KONG_PG_DATABASE: kong
       KONG_PG_USER: kong
       KONG_PG_PASSWORD: kong
+      KONG_PG_HOST: db
+    depends_on:
+      - db
+
+  #######################################
+  #Start the kong server
+  #######################################
+  kong:
+    image: kong
+    restart: on-failure
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_HOST: db
+      KONG_PG_DATABASE: kong
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: kong
+      KONG_PROXY_LISTEN: 0.0.0.0:8000
+      KONG_PROXY_LISTEN_SSL: 0.0.0.0:8443
+      KONG_ADMIN_LISTEN: 0.0.0.0:8001
+      KONG_ADMIN_LISTEN_SSL: 0.0.0.0:8444
       KONG_PROXY_ACCESS_LOG: /dev/stdout
       KONG_ADMIN_ACCESS_LOG: /dev/stdout
       KONG_PROXY_ERROR_LOG: /dev/stderr
       KONG_ADMIN_ERROR_LOG: /dev/stderr
-    links:
-      - kong-db
-# uncomment following line to run migrations for a new database
-    command: kong migrations up -v
+      KONG_VITALS: on
+      KONG_ENFORCE_RBAC: on
+      KONG_ADMIN_GUI_AUTH: ldap-auth-advanced
+      KONG_ADMIN_GUI_AUTH_CONF: '{"anonymous":"","attribute":"uid","base_dn":"dc=ldap,dc=mastercard,dc=com","cache_ttl": 2,"header_type":"Basic","keepalive":60000,"ldap_host":"23.96.34.152","ldap_port":389,"start_tls":false,"timeout":10000,"verify_ldap_host":false}'
+      KONG_LICENSE_DATA: $KONG_LICENSE_DATA
+      KONG_DNS_RESOLVER: 10.0.2.9:8600
+    ports:
+      - 8000:8000
+      - 8443:8443
+      - 8001:8001
+      - 8444:8444
+      - 8002:8002
+      - 8445:8445
+      - 8003:8003
+      - 8004:8004
     depends_on:
-      - kong-db
+      - kong-migration
+      - db
+    links:
+      - db
     healthcheck:
-      test: 'curl -f http://localhost:8001/status || exit 1'
-      interval: 1m
-      timeout: 3s
-      retries: 3
-    restart: unless-stopped
+      test: ["CMD-SHELL", "curl -I -s -L http://127.0.0.1:8000 || exit 1"]
+      interval: 5s
+      retries: 10
+
+  #######################################
+  #Start the konga gui
+  #######################################
+
   konga:
     image: pantsel/konga
     container_name: konga
@@ -65,8 +112,3 @@ services:
       - DB_PASSWORD=kong # Omit if not relevant
       - DB_DATABASE=kong # Defaults to 'konga_database'
       - NODE_ENV=development  #  "production" or "development" | defaults to 'development'
-
-volumes:
-  db-volume:
-# tutorial use for reference
-# https://blog.codecentric.de/en/2017/11/api-management-kong/
